--- a/plugins/list-item-deleter/manifest.json
+++ b/plugins/list-item-deleter/manifest.json
@@ -1,9 +1,9 @@
 {
-  "id": "list-deleter",
-  "name": "List Deleter",
+  "id": "list-item-deleter",
+  "name": "List Item Deleter",
   "version": "1.0.0",
-  "minAppVersion": "0.15.0",
   "description": "Quickly delete list items in Obsidian",
+  "minAppVersion": "1.6.7",
   "author": "Landon Schropp",
   "authorUrl": "https://www.landonschropp.com",
   "isDesktopOnly": false
