--- a/plugins/task-forwarder/manifest.json
+++ b/plugins/task-forwarder/manifest.json
@@ -1,10 +1,10 @@
 {
   "id": "task-forwarder",
   "name": "Task Forwarder",
-  "version": "1.0.0",
-  "minAppVersion": "0.15.0",
   "description": "Forwards tasks from previous daily notes",
+  "version": "1.0.0",
+  "minAppVersion": "1.6.7",
   "author": "Landon Schropp",
   "authorUrl": "https://www.landonschropp.com",
-  "isDesktopOnly": false
+  "isDesktopOnly": true
 }
