--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
     "preinstall": "npx only-allow pnpm",
     "prepare": "husky",
-    "lint": "eslint ."
+    "lint": "eslint . && prettier --write ."
   },
   "keywords": [
     "obsidian"
